--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bouncing balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
-    <h1>bouncing balls</h1>
+    <h1>Bouncing balls</h1>
     <canvas></canvas>
-
     <script src="main.js"></script>
   </body>
 </html>
+
