--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+	Name: Prathiksha Kairen
+	File: index.html
+	Date: 04 April 2024
+	HTML file for bouncing balls animation.
+	-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
